[gd_scene load_steps=5 format=3 uid="uid://ckm0ipx3o455n"]

[ext_resource type="Script" path="res://common/gui/dialog/common_dialog_post_item.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://dhhc6biqqjn27" path="res://gres/down.png" id="3"]
[ext_resource type="Script" path="res://common/base/base_control.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://bk3tiqne5kd2p" path="res://common/gui/common_bg.tscn" id="5"]

[node name="root" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="bg" parent="." instance=ExtResource("5")]
layout_mode = 2
mouse_filter = 2

[node name="Control" type="Control" parent="."]
layout_mode = 2
mouse_filter = 2

[node name="vBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 2
offset_right = 82.0
offset_bottom = 46.0

[node name="contentContainer" type="VBoxContainer" parent="Control/vBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 6
script = ExtResource("4")

[node name="TextureRect" type="TextureRect" parent="Control/vBoxContainer"]
self_modulate = Color(0.643137, 0.545098, 1, 0.376471)
custom_minimum_size = Vector2(82, 42)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource("3")
expand_mode = 1

[connection signal="on_click" from="." to="." method="_on_root_on_click"]
